[package]
name = "stobga"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delaunator    = "1.0.1"  # delaunay triangulation
rand          = "0.8.5"  # random number generation
rand_pcg      = "0.3.1"  # a deterministic random number generator
nalgebra      = "0.31.1" # linear algebra
itertools     = "0.10.3" # simplifications for iterations
petgraph      = "0.6.2"  # Graph library used to compute MST
indexmap      = "1.9.1"  # an ordered hashset
ordered-float = "3.0.0"  # implements hashing on float values
rug           = "1.17.0"